tests/rosetta/out/Smalltalk/cartesian-product-of-two-or-more-lists-4.out
/tmp/cartesian-product-of-two-or-more-lists-4.st:6: parse error, expected ']'
